[site] Fix overflow for modal (#3722)

--- a/docs/site/css/components/_request-access.scss
+++ b/docs/site/css/components/_request-access.scss
@@ -25,6 +25,7 @@
         background: $color-inverse;
         z-index: 1002;
         position: relative;
+        overflow: auto;
         h3 {
             margin-top: 0;
         }
